<resources>
    <string name="app_name">SuperSweetSurveyApp</string>
    <string name="login_text_title">Welcome! Please log in.</string>
    <string name="action_settings">Settings</string>
    <string name="username_login_hint">Username</string>
    <string name="password_login_hint">Password</string>
    <string name="password_create_account">Password</string>
    <string name="confirm_password_create_account">Confirm password</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_browse_surveys">BrowseSurveysActivity</string>
    <string name="logout_message">Logged out</string>
    <string name="hello_world">Hello world!</string>
    <string name="view_stats_text">VIEW STATS</string>
    <string name="take_survey_text">TAKE SURVEY</string>
    <string name="title_activity_take_survey">TakeSurveyActivity</string>
    <string name="submit_text">SUBMIT</string>
    <string name="logout_text">LOGOUT</string>
    <string name="title_activity_survey_stats">SurveyStatsActivity</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="create_account_title">Register for an account</string>
    <string name="create_account_fname">First Name</string>
    <string name="create_account_lname">Last Name</string>
    <string name="create_account_email">Email</string>
    <string name="live_stats">Live Stats</string>
</resources>
