<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_text_intro"
        android:text="@string/login_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/login_username_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint = "@string/username_login_hint"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/login_text_intro"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/login_password_edittext"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint = "@string/password_login_hint"
        android:layout_below="@id/login_username_edittext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button_text"
        android:layout_below="@id/login_password_edittext"
        android:onClick="checkCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
