


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.ucf.cop4331.supersweetsurveyapp.CreateAccountActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/create_account_title"
            android:text="@string/create_account_title"
            android:textSize="30sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fname_text_view"
            android:text="@string/create_account_fname"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_account_title"
            android:paddingTop="40dp" />

        <EditText
            android:id="@+id/fname_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fname_text_view" />

        <TextView
            android:id="@+id/lname_text_view"
            android:text="@string/create_account_lname"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fname_edit_text"
            android:paddingTop="20dp" />

        <EditText
            android:id="@+id/lname_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lname_text_view" />

        <TextView
            android:id="@+id/email_text_view"
            android:text="@string/create_account_email"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lname_edit_text"
            android:paddingTop="20dp" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_text_view" />

        <TextView
            android:id="@+id/password_text_view"
            android:text="@string/password_create_account"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_edit_text"
            android:paddingTop="20dp" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_text_view"
            android:password="true" />

        <TextView
            android:id="@+id/confirm_password_text_view"
            android:text="@string/confirm_password_create_account"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit_text"
            android:paddingTop="20dp" />

        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_password_text_view"
            android:password="true" />

        <Button
            android:id="@+id/create_account_button"
            android:text="@string/submit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:layout_below="@+id/confirm_password_edit_text"
            android:layout_alignParentStart="true"
            android:onClick="createAccount"/>

    </RelativeLayout>



</ScrollView>
